Fill styles folder

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -11,7 +11,7 @@
     <title>Inviter</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Для использования веб-приложения необходимо разрешить использование JavaScript в вашем браузере</noscript>
     <div id="root"></div>
   </body>
 </html>
