--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Самое эффективное приложение для поиска компании. Пора найти, с кем провести этот вечер!"
+      content="Новое современное приложение для поиска компании! Легко находи компанию по интересам, проводи весело совбодное время и заводи новых друзей. Пора найти, с кем провести этот вечер!"
     />
     <title>Inviter</title>
   </head>
